test: Modify test to be more consistent